<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">點餐系統</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="open_left_drawer">選擇功能</string>
    <string name="close_left_drawer">選擇功能</string>
    <string name="action_search">search</string>
    <string name="action_refresh">refresh</string>
    <string name="no_order">尚未點餐</string>
    <string name="myfavor">我的最愛</string>
    <color name="beige">#F2E8DC</color>
    <string name="sentorder">發送訂單</string>
    <color name="orangered">#FF4500</color>
    <color name="black">#000000</color>
    <color name="lightgray">#D3D3D3</color>
    <string name="UserName">User Name</string>
    <string name="Address">Address</string>
    <string name="Location">Location</string>
    <string name="Delete">刪除</string>
    <string name="store">店家名稱</string>
    <string name="SetOrder">訂購</string>
    <string name="no">編號</string>
    <string name="state">狀態: </string>
    <string name="nono">編號: </string>
    <string name="hint">請輸入電話號碼查詢訂單狀態</string>
  
</resources>
