<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/UserName"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/txtContext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtName"
        android:layout_marginTop="5dp"
        android:text="@string/Address"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txtNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/no"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/orangered" />

    <TextView
        android:id="@+id/txtState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtNo"
        android:layout_marginTop="3dp"
        android:text="@string/Delete"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/orangered" />

    <TextView
        android:id="@+id/txtMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtContext"
        android:layout_marginTop="5dp"
        android:text="@string/Location" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtState"
        android:layout_toLeftOf="@+id/txtNo"
        android:text="@string/nono"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtState"
        android:layout_alignBottom="@+id/txtState"
        android:layout_toLeftOf="@+id/txtState"
        android:text="@string/state"
        android:textColor="@color/black" />

</RelativeLayout>

